Remove redundant call to super()
- Use valueOf()